# seceda

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  models  pyproject.toml
cmake/toolchains/: aarch64-linux-gnu.cmake
docs/: work_log.md
docs/initial-plans/: demo_dashboard_design.md  dev_ideas.md  edge_device_load_testing.md  repo_structure_summary.md  routing_approaches_brainstorming.md  use_cases.md
scripts/: build.sh
seceda/: __init__.py
seceda/cloud/: README.md  vllm_inference.py
seceda/edge/: README.md  __init__.py  test_client.py
seceda/edge/cpp/src/: CMakeLists.txt
seceda/edge/cpp/tests/: CMakeLists.txt
seceda_cloud/: README.md  __init__.py  local_server_utils.py  modal_server_helpers.py  pyproject.toml  sglang_compile.py  sglang_inference.py  vllm_inference.py
seceda_cloud/tests/: README.md  modal_lfm_test.py  modal_sglang_kitchen_sink.py  modal_sglang_low_latency.py  modal_sglang_snapshot.py  modal_vllm_inference.py  modal_vllm_low_latency.py
seceda_edge/: README.md  pyproject.toml
seceda_edge/config/: config_catalog.toml  seceda.toml
seceda_edge/cpp/: CMakeLists.txt  README.md
seceda_edge/cpp/apps/: CMakeLists.txt
seceda_edge/cpp/apps/seceda_edge_daemon/: CMakeLists.txt  main.cpp
seceda_edge/cpp/src/: CMakeLists.txt
seceda_edge/cpp/src/cloud_bridge/: CMakeLists.txt  README.md  cloud_client.cpp  cloud_client.hpp
seceda_edge/cpp/src/config_catalog/: CMakeLists.txt  config_catalog.cpp  config_catalog.hpp  simple_toml.cpp  simple_toml.hpp  simple_toml_read.hpp
seceda_edge/cpp/src/file_utils/: read_text_file.hpp
seceda_edge/cpp/src/json_utils/: read_optional.hpp
seceda_edge/cpp/src/local_models/: CMakeLists.txt  README.md  llama_runtime.cpp  llama_runtime.hpp  local_engine_registry.cpp  local_engine_registry.hpp  local_engine_resolve.cpp  local_engine_resolve.hpp  local_execution_modes.cpp  local_execution_modes.hpp  sidecar_local_engine_adapter.cpp  sidecar_local_engine_adapter.hpp  stub_local_engine_adapter.cpp  stub_local_engine_adapter.hpp
seceda_edge/cpp/src/openai_compat/: CMakeLists.txt  openai_compat.hpp  openai_errors.cpp  openai_models.cpp  openai_parse.cpp  openai_wire.cpp
seceda_edge/cpp/src/router/: CMakeLists.txt  README.md  heuristic_router.cpp  heuristic_router.hpp
seceda_edge/cpp/src/runtime/: CMakeLists.txt  README.md  contracts.hpp  dotenv_load.cpp  dotenv_load.hpp  edge_daemon.cpp  edge_daemon.hpp  interfaces.hpp  request_executor.cpp  request_executor.hpp  runtime_config.cpp  runtime_config.hpp
seceda_edge/cpp/src/telemetry/: CMakeLists.txt  README.md  metrics_registry.cpp  metrics_registry.hpp  trace_registry.cpp  trace_registry.hpp
seceda_edge/cpp/src/text_utils/: normalize.hpp
seceda_edge/cpp/tests/: CMakeLists.txt  cloud_client_test.cpp  edge_daemon_test.cpp  llama_runtime_smoke.cpp  metrics_registry_test.cpp  openai_compat_test.cpp  openai_http_integration_test.cpp  openai_streaming_integration_test.cpp  request_executor_test.cpp  router_heuristic_test.cpp  runtime_config_test.cpp  sidecar_local_engine_adapter_test.cpp  trace_registry_test.cpp
seceda_edge/cpp/tests/fixtures/openai/: chat_completion_basic.json  chat_completion_tools_passthrough.json  chat_completion_unknown_model.json
seceda_edge/tests/: README.md
seceda_gui/: README.md
seceda_shared/: README.md
seceda_tui/: README.md  package.json  tsconfig.json
seceda_tui/src/: app.tsx  index.tsx
seceda_tui/src/lib/: config_catalog.ts  config_file.ts  domain.ts  paths.ts  seceda_api.ts
seceda_tui/src/lib/transport_adapters/: chat_completions.ts  responses.ts
seceda_tui/src/screens/: configuration.tsx  observability.tsx
seceda_tui/test/: config_file.test.ts  domain.test.ts  seceda_api.test.ts  transport_adapters.test.ts
src/: CMakeLists.txt
