[project]
name = "seceda"
version = "0.1.0"
description = "Edge-first hybrid inference package and tooling for Seceda."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
cloud = [
    "aiohttp",
    "modal",
]
edge = [
    "openai>=2.26.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["seceda"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = [
    "seceda/cloud/tests",
    "seceda/edge/tests",
]
