[project]
name = "seceda-edge"
version = "0.1.0"
description = "Edge-side Python helpers and tooling for Seceda."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.26.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
